--- a/clients/scoreboard/src/components/TeamsDisplay/teamDisplay.scss
+++ b/clients/scoreboard/src/components/TeamsDisplay/teamDisplay.scss
@@ -1,3 +1,12 @@
+
+.TeamContainer {
+    margin-top: 40px;
+}
+
+.TeamCard {
+    margin: 10px;
+}
+
 .TeamTable {
     margin-left: 12.5%;
     width: 75%; 
