--- a/clients/master/src/components/Panel/panel.scss
+++ b/clients/master/src/components/Panel/panel.scss
@@ -2,21 +2,19 @@
   width: 18rem;
   height: 100%;
 
+  .list-group {
+    height: 100%;
+    overflow-y: auto;
+  }
+
   .card {
     height: 80%;
   }
-}
 
-.card-actions {
-  display: flex;
-  justify-content: space-between;
-  button {
-    width: 45%;
+  .card-actions {
+    display: flex;
+    justify-content: center;
   }
-}
 
-.panel-content {
-  height: 100%;
-  overflow-y: auto;
 }
 
