--- a/clients/master/src/pages/teams/teams.scss
+++ b/clients/master/src/pages/teams/teams.scss
@@ -4,3 +4,12 @@
   width: 100%;
   height: 100%;
 }
+
+.team-application-buttons {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  button {
+    width: 45%;
+  }
+}
