--- a/clients/team/src/components/LoadingSpinner/loading-spinner.scss
+++ b/clients/team/src/components/LoadingSpinner/loading-spinner.scss
@@ -1,4 +1,8 @@
 .spinner-border-huge {
-  width: 10rem;
-  height: 10rem;
+  width: 12rem;
+  height: 12rem;
+}
+
+.center {
+  text-align: center;
 }
