--- a/clients/master/src/index.scss
+++ b/clients/master/src/index.scss
@@ -14,7 +14,7 @@ code {
 
 .space-between {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   width: 100%;
   height: 100%;
 
