--- a/clients/master/src/index.scss
+++ b/clients/master/src/index.scss
@@ -12,9 +12,9 @@ code {
   monospace;
 }
 
-.space-between {
+.space-around {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 100%;
   height: 100%;
 
