next round and night end route

--- a/clients/master/src/index.scss
+++ b/clients/master/src/index.scss
@@ -33,3 +33,8 @@ code {
 .margin-right {
   margin-right: 1rem;
 }
+
+.btn-huge {
+  padding: 4rem 5rem !important;
+  font-size: 1.5rem !important;
+}
