--- a/clients/master/src/index.scss
+++ b/clients/master/src/index.scss
@@ -38,3 +38,14 @@ code {
   padding: 4rem 5rem !important;
   font-size: 1.5rem !important;
 }
+
+.card-container {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+
+  .card {
+    width: 80%;
+  }
+
+}
