--- a/clients/master/src/index.scss
+++ b/clients/master/src/index.scss
@@ -1,3 +1,5 @@
+@import "~shared";
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -39,13 +41,3 @@ code {
   font-size: 1.5rem !important;
 }
 
-.card-container {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-
-  .card {
-    width: 80%;
-  }
-
-}
