--- a/clients/shared/shared/src/components/Page/Header/header.scss
+++ b/clients/shared/shared/src/components/Page/Header/header.scss
@@ -1,11 +1,11 @@
-.header {
+.quizzer-header {
   position: relative;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  height: 8rem;
-
+  height: 10rem;
+  width: 100%;
   &>.progress {
     position: absolute;
     top: 0;
