--- a/clients/scoreboard/src/components/roundHeader/roundHeader.scss
+++ b/clients/scoreboard/src/components/roundHeader/roundHeader.scss
@@ -1,6 +1,6 @@
 .infoWrapper {
     box-sizing: border-box;
-    justify-content: end;
+    justify-content: flex-end;
     display: flex;
     flex-direction: column;
     .infoRow {
