--- a/clients/scoreboard/src/components/TeamsDisplay/QuestionScore/question-score.scss
+++ b/clients/scoreboard/src/components/TeamsDisplay/QuestionScore/question-score.scss
@@ -1,7 +1,9 @@
 .Correct {
-  background-color: green ;
+  color: #fff;
+  background-color: #28a745;
 }
 
 .False {
-  background-color: red;
+  color: #fff;
+  background-color: #dc3545;
 }
